@@ -202,6 +202,8 @@ Bug Fixes
 
 * SOLR-17333: Rate-limiting feature: fix live-update of config (Michael Gibney)
 
+* SOLR-17367: Restore the use of -params option to PostTool. (Bostoi via Eric Pugh)
+
 Dependency Upgrades
 ---------------------
 (No changes)
